--- a/bjs/07_Number_and_string/style.css
+++ b/bjs/07_Number_and_string/style.css
@@ -7,3 +7,11 @@
     text-align: end;
     font-size: x-large;
 }
+
+.card-body {
+    background-color: #BFBA30;
+}
+
+.col {
+    background-color: aliceblue;
+}
